--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ canvas { background-color: #999; border: 1px solid #000; display: block; }
 
 label[title]>span,span[title] { text-decoration: underline dotted; }
 
+.wait:after { content: " "; display: inline-block; width: 12px; height: 12px; margin: -2px 0 -2px 6px;  vertical-align: baseline; border-radius: 50%; border: 4px solid #000; border-color: #000 transparent #000 transparent; animation: lds-dual-ring 1.2s linear infinite; }
+@keyframes lds-dual-ring { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+
+
 .shake { animation: 0.4s linear 0s normal none 1 running shake; }
 @keyframes shake {
 	8%, 41% { transform: translate(-10px, 0); }
